--- a/alkemyProject/pom.xml
+++ b/alkemyProject/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.alkemy</groupId>
 	<artifactId>alkemyProject</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>alkemyProject</name>
+	<name>ICONSProject</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
