--- a/alkemyProject/src/main/resources/application.properties
+++ b/alkemyProject/src/main/resources/application.properties
@@ -1,10 +1,17 @@
+#datasource
 spring.datasource.url:jdbc:mysql://localhost:3306/alkemyproject?allowPublicKeyRetrieval=true&useSSL=false&useTimezone=true&serverTimezone=GMT&characterEncoding=UTF-8
 spring.datasource.username:root
 spring.datasource.password:root
 spring.datasource.driver-class-name:com.mysql.cj.jdbc.Driver
 server.port=8080
-
-spring.jpa.show-sql: true
+#hibernate
 spring.jpa.hibernate.ddl-auto: update
+#SQL
+spring.jpa.show-sql: true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 spring.thymeleaf.cache: false
+#override
+spring.main.allow-bean-definition-overriding=true
+#email
+#alkemy.icons.email.sender=fabyross09@gmail.com
