--- a/alkemyProject/pom.xml
+++ b/alkemyProject/pom.xml
@@ -52,7 +52,28 @@
 	  <artifactId>eclipselink</artifactId>
 	  <version>2.5.2</version>
 	 </dependency>
-                 
+         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+            <type>jar</type>
+        </dependency>
+	 <dependency>
+	  <groupId>org.hibernate</groupId>
+	  <artifactId>hibernate-core</artifactId>
+	  <version>5.6.12.Final</version>
+	  <type>jar</type>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.hibernate.orm</groupId>
+	  <artifactId>hibernate-core</artifactId>
+	  <version>6.1.5.Final</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
