--- a/alkemyProject/src/main/resources/application.properties
+++ b/alkemyProject/src/main/resources/application.properties
@@ -14,4 +14,5 @@ spring.thymeleaf.cache: false
 #override
 spring.main.allow-bean-definition-overriding=true
 #email
-#alkemy.icons.email.sender=fabyross09@gmail.com
+alkemy.icons.email.sender=fabyross09@gmail.com
+alkemy.icons.email.enabled=true
