--- a/alkemyProject/pom.xml
+++ b/alkemyProject/pom.xml
@@ -32,6 +32,10 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+                <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -47,11 +51,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-                <dependency>
-                <groupId>org.eclipse.persistence</groupId>
-	  <artifactId>eclipselink</artifactId>
-	  <version>2.5.2</version>
-	 </dependency>
+                
          <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -63,17 +63,14 @@
             <type>jar</type>
         </dependency>
 	 <dependency>
-	  <groupId>org.hibernate</groupId>
-	  <artifactId>hibernate-core</artifactId>
-	  <version>5.6.12.Final</version>
-	  <type>jar</type>
-	 </dependency>
-	 <dependency>
-	  <groupId>org.hibernate.orm</groupId>
-	  <artifactId>hibernate-core</artifactId>
-	  <version>6.1.5.Final</version>
-	  <type>jar</type>
-	 </dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+         <dependency>
+            <groupId>com.sendgrid</groupId>
+            <artifactId>sendgrid-java</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
